--- a/src/style.css
+++ b/src/style.css
@@ -52,9 +52,9 @@ form {
   font-size: 16px;
   background-color: rgb(194, 168, 193);
 }
-.poem {
+.prompt {
   font-size: 14px;
-  background-color: white;
+  background-color: rgb(254, 236, 232);
   padding: 20px;
   line-height: 24px;
   border-left: 3px solid rgb(194, 168, 193);
